Fix overflow in footer

--- a/DurandalAuth.Web/Content/app.css
+++ b/DurandalAuth.Web/Content/app.css
@@ -252,6 +252,7 @@ footer {
 	background-color:#3d288e;
 	color : #FFF;    
 	display:none;
+    overflow : hidden;
 }
 
 .footer-content {
